k8s/stub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stub-service
  namespace: stub
spec:
  selector:
    app: stub-app
  ports:
    - port: 80
      targetPort: 5678
