k8s/stub/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stub-route
  namespace: stub
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cloudflare-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "bug-farm.xyz"
    - "*.bug-farm.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: stub-service
          port: 80
          weight: 1
