k8s/stub/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stub-route
  namespace: stub
spec:
  parentRefs:
    - name: default
      namespace: envoy-gateway-system
  hostnames:
    - "bug-farm.xyz"
    - "*.bug-farm.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stub-service
          port: 80
